--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-hello world
+hellowoc
+<style type=text/css>
+   body {background-image:url(https://tuapi.eees.cc/api.php?category=dongman&type=302) ;//图片类型更换请修改参数  
+   background-repeat:repeat;
+   background-attachment:fixed;
+   background-position:50% 50%;
+   }
+</style>
