--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
     <head>
+        <meta charset="utf-8" /> 
         <title>艾图一图 下载</title>
     </head>
     <body>
-        <br/>
-        <font size=100>测试</font>
+        <div style="font-size:45px;color:#02C874;",c>〖艾图+〗  丨 『专享』</div>
+        </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+        <div style="font-size:50px;color:#00E3E3;text-align:center;",c>轻触以获取一图</div>
+        </br>
+        <div style="font-size:80px;text-align:center;",c>➡️</div>
     </body>
 </html>
 
