--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>艾图一图 Download</title>
     </head>
     <body>
-        <div style="font-size:45px;color:#02C874;",c><艾图+  丨 专享></div>
+        <div style="font-size:45px;color:#02C874;",c><艾图More  丨 专享></div>
         </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
         <div style="font-size:50px;text-align:center;",c><mark>轻触以获取一图</mark></div>
         </br>
