--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <div style="font-size:45px;color:#02C874;",c><艾图More  丨 专享></div>
         </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
-        <div style="font-size:50px;text-align:center;",c><mark>轻触以获取一图</mark></div>
+        <div style="font-size:50px;text-align:center;",c><mark>轻触右下方按钮以获取一图</mark></div>
         </br>
         <div style="font-size:80px;text-align:center;",c>➡️</div>
     </body>
