--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
         <meta charset="utf-8" /> 
-        <title>艾图一图 Download</title>
+        <title>一图 Download</title>
     </head>
     <body>
-        <div style="font-size:45px;color:#02C874;",c><艾图More  丨 专享></div>
-        </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+        <div style="font-size:45px;color:#02C874;",c><一图Core></div>
+        </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
         <div style="font-size:50px;text-align:center;",c><mark>轻触右下方按钮以获取一图</mark></div>
         </br>
         <div style="font-size:80px;text-align:center;",c>➡️</div>
